# lcc

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/cases/approximate_token_fallback/: case.yaml  input.txt
benchmarks/cases/basic_redundancy/: case.yaml  input.txt
benchmarks/cases/boilerplate_cleanup/: case.yaml  input.txt
benchmarks/cases/evidence_preservation/: case.yaml  input.txt
config/: default.yaml  pricing.yaml
docs/: architecture.md  evaluation.md  release.md  roadmap.md
docs/adr/: 0001-schema-contracts.md  0002-module-boundaries.md  0003-cli-contract.md  0004-report-schema-versioning.md  0005-tokenization-boundary.md  0006-determinism-boundary.md  0007-deterministic-benchmark-harness.md  0008-tokenizer-network-boundary.md  0009-inspection-command-boundary.md  README.md
examples/: basic_usage.md  sample_input.txt
src/lcc/: __init__.py  cli.py  pipeline.py  schemas.py
src/lcc/benchmarking/: __init__.py  case_loader.py  report.py  runner.py  schemas.py
src/lcc/cleaning/: __init__.py  boilerplate.py  deduplicate.py  normalize.py
src/lcc/inspection/: __init__.py  inspector.py  report.py  schemas.py
src/lcc/prompt_builder/: __init__.py  builder.py  templates.py
src/lcc/reporting/: __init__.py  report.py
src/lcc/token_budget/: __init__.py  counters.py  pricing.py
tests/: test_benchmarking.py  test_cleaning.py  test_cli.py  test_deduplicate.py  test_inspection.py  test_pipeline.py  test_prompt_builder.py  test_token_budget.py
