[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-context-compiler"
version = "0.1.0"
description = "Deterministic, local-first context optimization for LLM prompts: clean, dedupe, structure, and measure token and cost savings before calling a large model."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Local Context Compiler contributors" }]
keywords = ["llm", "tokens", "prompt", "context", "optimization", "cost", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: General",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# tiktoken enables EXACT token counting; lcc falls back to a heuristic without it.
tiktoken = ["tiktoken>=0.7"]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "tiktoken>=0.7",
  "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/vetlucasmartins/lcc"
Repository = "https://github.com/vetlucasmartins/lcc"
Issues = "https://github.com/vetlucasmartins/lcc/issues"

[project.scripts]
lcc = "lcc.cli:cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
# Typer expects callables (typer.Option/Argument) as parameter defaults.
"src/lcc/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["lcc"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
